# beambo

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile  main.py  pyproject.toml
.claude/: settings.json
.claude/skills/doc-coauthoring/: SKILL.md
.claude/skills/writing-adrs/: SKILL.md
.claude/skills/writing-docs/: SKILL.md
.claude/skills/writing-docs/reference/: diataxis.md  fumadocs.md
.claude/skills/writing-specs/: SKILL.md
app/: analysis.py  plotting.py  run_beam.py  verification.py
app/cases/: brice.py  simply_supported_c24.py
app/formulas/: __init__.py  cantilever.py  fixed_fixed.py  propped_cantilever.py  simply_supported.py
app/models/: __init__.py  case.py  results.py  supports.py
app/models/loads/: __init__.py  cases.py  combinations.py
app/models/materials/: __init__.py  steel.py  timber.py
app/models/sections/: __init__.py  circular.py  rectangular.py
app/report/: __init__.py  context.py  render.py  template.html.j2
llm/context/: context.py
test/: conftest.py  helpers.py  test_cantilever.py  test_fixed_fixed.py  test_propped_cantilever.py  test_simply_supported.py
